Clean up for my current style